--- a/coats.html
+++ b/coats.html
@@ -150,7 +150,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=9"><img src="images/urunler/coats/AcıKahveKısaKurk.jpg" alt="Acı Kahve Kısa Kürk">
       </a>
-      <h3><a href="productDetail.html?id=9"></a>Acı Kahve Kısa Kürk</h3>
+      <h3><a href="productDetail.html?id=9">Acı Kahve Kısa Kürk</a></h3>
       <p>1299.99 TL</p>
       <button class="favorite-icon" data-id="9">♥</button>
     </div>
@@ -159,7 +159,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=10"><img src="images/urunler/coats/AntrasitKaseKaban.jpg" alt="Antrasit Maxi Kaşe Kaban">
       </a>
-      <h3><a href="productDetail.html?id=10"></a>Antrasit Maxi Kaşe Kaban</h3>
+      <h3><a href="productDetail.html?id=10">Antrasit Maxi Kaşe Kaban</a></h3>
       <p>1299.99 TL</p>
       <button class="favorite-icon" data-id="10">♥</button>
     </div>
@@ -168,7 +168,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=11"><img src="images/urunler/coats/BejKaseKaban.jpg" alt="Bej Maxi Kaşe Kaban">
       </a>
-      <h3><a href="productDetail.html?id=11"></a>Bej Maxi Kaşe Kaban </h3>
+      <h3><a href="productDetail.html?id=11">Bej Maxi Kaşe Kaban </a></h3>
       <p>1299.99 TL</p>
       <button class="favorite-icon" data-id="11">♥</button>
     </div>
@@ -177,7 +177,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=12"><img src="images/urunler/coats/CizgiliKısaKaban.jpg" alt="Çizgili Kısa Kaban">
       </a>
-      <h3><a href="productDetail.html?id=12"></a>Çizgili Kısa Kaban</h3>
+      <h3><a href="productDetail.html?id=12">Çizgili Kısa Kaban</a></h3>
       <p>1199.99 TL</p>
       <button class="favorite-icon" data-id="12">♥</button>
     </div>
@@ -186,7 +186,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=13"><img src="images/urunler/coats/KahveDenimMont.jpg" alt="Kahve Denim Detaylı Mont">
       </a>
-      <h3><a href="productDetail.html?id=13"></a>Kahve Denim Detaylı Mont</h3>
+      <h3><a href="productDetail.html?id=13">Kahve Denim Detaylı Mont</a></h3>
       <p>999.99 TL</p>
       <button class="favorite-icon" data-id="13">♥</button>
     </div>
@@ -195,7 +195,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=14"><img src="images/urunler/coats/KahveKaseKaban.jpg" alt="Kahve Maxi Kaşe Kaban">
       </a>
-      <h3><a href="productDetail.html?id=14"></a>Kahve Maxi Kaşe Kaban</h3>
+      <h3><a href="productDetail.html?id=14">Kahve Maxi Kaşe Kaban</a></h3>
       <p>1299.99 TL</p>
       <button class="favorite-icon" data-id="14">♥</button>
     </div>
@@ -204,7 +204,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=15"><img src="images/urunler/coats/KurkluSiyahKaseKaban.jpg" alt="Kürklü Siyah Kaşe Kaban">
       </a>
-      <h3><a href="productDetail.html?id=15"></a>Kürklü Siyah Kaşe Kaban</h3>
+      <h3><a href="productDetail.html?id=15">Kürklü Siyah Kaşe Kaban</a></h3>
       <p>1499.99 TL</p>
       <button class="favorite-icon" data-id="15">♥</button>
     </div>
@@ -213,7 +213,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=16"><img src="images/urunler/coats/SiyahKaseKaban.jpg" alt="Siyah Maxi Kaşe Kaban">
       </a>
-      <h3><a href="productDetail.html?id=16"></a>Siyah Maxi Kaşe Kaban</h3>
+      <h3><a href="productDetail.html?id=16">Siyah Maxi Kaşe Kaban</a></h3>
       <p>1299.99 TL</p>
       <button class="favorite-icon" data-id="16">♥</button>
     </div>
@@ -222,7 +222,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=17"><img src="images/urunler/coats/TasBaglamalıMont.jpg" alt="Taş Renk Bağlamalı Mont">
       </a>
-      <h3><a href="productDetail.html?id=17"></a>Taş Renk Bağlamalı Mont</h3>
+      <h3><a href="productDetail.html?id=17">Taş Renk Bağlamalı Mont</a></h3>
       <p>999.99 TL</p>
       <button class="favorite-icon" data-id="17">♥</button>
     </div>
@@ -231,7 +231,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=18"><img src="images/urunler/coats/TasOrtaBoyKurk.jpg" alt="Taş Renk Orta Boy Kürk">
       </a>
-      <h3><a href="productDetail.html?id=18"></a>Taş Renk Orta Boy Kürk</h3>
+      <h3><a href="productDetail.html?id=18">Taş Renk Orta Boy Kürk</a></h3>
       <p>1499.99 TL</p>
       <button class="favorite-icon" data-id="18">♥</button>
     </div>
