--- a/jackets.html
+++ b/jackets.html
@@ -150,7 +150,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=29"><img src="images/urunler/jackets/BejKurkCeket.jpg" alt="Bej Kürk Ceket">
       </a>
-      <h3><a href="productDetail.html?id=29"></a>Bej Kürk Ceket</h3>
+      <h3><a href="productDetail.html?id=29">Bej Kürk Ceket</a></h3>
       <p>799.99 TL</p>
       <button class="favorite-icon" data-id="29">♥</button>
     </div>
@@ -159,7 +159,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=30"><img src="images/urunler/jackets/BejKusaklıCeket.jpg" alt="Bej Kuşaklı Ceket">
       </a>
-      <h3><a href="productDetail.html?id=30"></a> Bej Kuşaklı Ceket</h3>
+      <h3><a href="productDetail.html?id=30"> Bej Kuşaklı Ceket</a></h3>
       <p>699.99 TL</p>
       <button class="favorite-icon" data-id="30">♥</button>
     </div>
@@ -168,7 +168,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=31"><img src="images/urunler/jackets/BeyazCropCeket.jpg" alt="Beyaz Crop Ceket ">
       </a>
-      <h3><a href="productDetail.html?id=31"></a>Beyaz Crop Ceket </h3>
+      <h3><a href="productDetail.html?id=31">Beyaz Crop Ceket </a></h3>
       <p>499.99 TL</p>
       <button class="favorite-icon" data-id="31">♥</button>
     </div>
@@ -177,7 +177,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=32"><img src="images/urunler/jackets/CizgiliOversizeCeket.jpg" alt="Siyah Çizgili Oversize Ceket">
       </a>
-      <h3><a href="productDetail.html?id=32"></a>Siyah Çizgili Oversize Ceket</h3>
+      <h3><a href="productDetail.html?id=32">Siyah Çizgili Oversize Ceket</a></h3>
       <p>549.99 TL</p>
       <button class="favorite-icon" data-id="32">♥</button>
     </div>
@@ -186,7 +186,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=33"><img src="images/urunler/jackets/DenimCeket.jpg" alt="Mavi Denim Ceket">
       </a>
-      <h3><a href="productDetail.html?id=33"></a>Mavi Denim Ceket</h3>
+      <h3><a href="productDetail.html?id=33">Mavi Denim Ceket</a></h3>
       <p>599.99 TL</p>
       <button class="favorite-icon" data-id="33">♥</button>
     </div>
@@ -195,7 +195,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=34"><img src="images/urunler/jackets/KahveDeriCeket.jpg" alt="Kahve Deri Ceket">
       </a>
-      <h3><a href="productDetail.html?id=34"></a>Kahve Deri Ceket</h3>
+      <h3><a href="productDetail.html?id=34">Kahve Deri Ceket</a></h3>
       <p>799.99 TL</p>
       <button class="favorite-icon" data-id="34">♥</button>
     </div>
@@ -204,7 +204,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=35"><img src="images/urunler/jackets/KahveKısaCeket.jpg" alt="Kahve Kısa Ceket">
       </a>
-      <h3><a href="productDetail.html?id=35"></a>Kahve Kısa Ceket</h3>
+      <h3><a href="productDetail.html?id=35">Kahve Kısa Ceket</a></h3>
       <p>499.99 TL</p>
       <button class="favorite-icon" data-id="35">♥</button>
     </div>
@@ -213,7 +213,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=36"><img src="images/urunler/jackets/LacivertBlazer.jpg" alt="Lacivert Belden Oturmalı Ceket">
       </a>
-      <h3><a href="productDetail.html?id=36"></a>Lacivert Belden Oturmalı Ceket</h3>
+      <h3><a href="productDetail.html?id=36">Lacivert Belden Oturmalı Ceket</a></h3>
       <p>699.99 TL</p>
       <button class="favorite-icon" data-id="36">♥</button>
     </div>
@@ -222,7 +222,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=37"><img src="images/urunler/jackets/LeoparCeket.jpg" alt="Leopar Desenli Ceket">
       </a>
-      <h3><a href="productDetail.html?id=37"></a>Leopar Desenli Ceket</h3>
+      <h3><a href="productDetail.html?id=37">Leopar Desenli Ceket</a></h3>
       <p>899.99 TL</p>
       <button class="favorite-icon" data-id="37">♥</button>
     </div>
@@ -231,7 +231,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=38"><img src="images/urunler/jackets/OturanDenim.jpg" alt="Belden Oturmalı Denim Ceket">
       </a>
-      <h3><a href="productDetail.html?id=38"></a>Belden Oturmalı Denim Ceket</h3>
+      <h3><a href="productDetail.html?id=38">Belden Oturmalı Denim Ceket</a></h3>
       <p>699.99 TL</p>
       <button class="favorite-icon" data-id="38">♥</button>
     </div>
