--- a/pants.html
+++ b/pants.html
@@ -151,7 +151,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=39"><img src="images/urunler/pants/KumasPantolon1.jpg" alt="Çizgili Kumaş Pantolon">
       </a>
-      <h3><a href="productDetail.html?id=39"></a>Çizgili Kumaş Pantolon</h3>
+      <h3><a href="productDetail.html?id=39">Çizgili Kumaş Pantolon</a></h3>
       <p>449.99 TL</p>
       <button class="favorite-icon" data-id="39">♥</button>
     </div>
@@ -160,7 +160,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=40"><img src="images/urunler/pants/KetenPantolon1.jpg" alt="Beyaz Keten Pantolon">
       </a>
-      <h3><a href="productDetail.html?id=40"></a> Beyaz Keten Pantolon</h3>
+      <h3><a href="productDetail.html?id=40"> Beyaz Keten Pantolon</a></h3>
       <p>499.99 TL</p>
       <button class="favorite-icon" data-id="40">♥</button>
     </div>
@@ -169,7 +169,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=41"><img src="images/urunler/pants/PembeKPantolon1.jpg" alt="Pembe Kumaş Pantolon ">
       </a>
-      <h3><a href="productDetail.html?id=41"></a>Pembe Kumaş Pantolon </h3>
+      <h3><a href="productDetail.html?id=41">Pembe Kumaş Pantolon </a></h3>
       <p>549.99 TL</p>
       <button class="favorite-icon" data-id="41">♥</button>
     </div>
@@ -178,7 +178,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=42"><img src="images/urunler/pants/KahvePalazzoP1.jpg" alt="Kahve Palazzo Pantolon">
       </a>
-      <h3><a href="productDetail.html?id=42"></a>Kahve Palazzo Pantolon</h3>
+      <h3><a href="productDetail.html?id=42">Kahve Palazzo Pantolon</a></h3>
       <p>549.99 TL</p>
       <button class="favorite-icon" data-id="42">♥</button>
     </div>
@@ -187,7 +187,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=43"><img src="images/urunler/pants/LeoparJean1.jpg" alt="Leopar Desenli Jean">
       </a>
-      <h3><a href="productDetail.html?id=43"></a>Leopar Desenli Jean</h3>
+      <h3><a href="productDetail.html?id=43">Leopar Desenli Jean</a></h3>
       <p>599.99 TL</p>
       <button class="favorite-icon" data-id="43">♥</button>
     </div>
@@ -196,7 +196,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=44"><img src="images/urunler/pants/DeriPantolon1.jpg" alt="Deri Pantolon">
       </a>
-      <h3><a href="productDetail.html?id=44"></a>Deri Pantolon</h3>
+      <h3><a href="productDetail.html?id=44">Deri Pantolon</a></h3>
       <p>599.99 TL</p>
       <button class="favorite-icon" data-id="44">♥</button>
     </div>
@@ -205,7 +205,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=45"><img src="images/urunler/pants/EskitmeJean1.jpg" alt="Eskitme Wide Jean">
       </a>
-      <h3><a href="productDetail.html?id=45"></a>Eskitme Wide Jean</h3>
+      <h3><a href="productDetail.html?id=45">Eskitme Wide Jean</a></h3>
       <p>499.99 TL</p>
       <button class="favorite-icon" data-id="45">♥</button>
     </div>
@@ -214,7 +214,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=46"><img src="images/urunler/pants/BeyazJean1.jpg" alt="İspanyol Paça Beyaz Jean">
       </a>
-      <h3><a href="productDetail.html?id=46"></a>İspanyol Paça Beyaz Jean</h3>
+      <h3><a href="productDetail.html?id=46">İspanyol Paça Beyaz Jean</a></h3>
       <p>499.99 TL</p>
       <button class="favorite-icon" data-id="46">♥</button>
     </div>
@@ -223,7 +223,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=47"><img src="images/urunler/pants/PudraPantolon.jpg" alt="Pudra Pantolon">
       </a>
-      <h3><a href="productDetail.html?id=47"></a>Pudra Pantolon</h3>
+      <h3><a href="productDetail.html?id=47">Pudra Pantolon</a></h3>
       <p>449.99 TL</p>
       <button class="favorite-icon" data-id="47">♥</button>
     </div>
@@ -232,7 +232,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=48"><img src="images/urunler/pants/AntrasitPantolon.jpg" alt="Antrasit Pantolon">
       </a>
-      <h3><a href="productDetail.html?id=48"></a>Antrasit Pantolon</h3>
+      <h3><a href="productDetail.html?id=48">Antrasit Pantolon</a></h3>
       <p>449.99 TL</p>
       <button class="favorite-icon" data-id="48">♥</button>
     </div>
