--- a/shorts.html
+++ b/shorts.html
@@ -151,7 +151,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=59"><img src="images/urunler/shorts/BeyazKotSort.jpg" alt="Beyaz Kot Şort">
       </a>
-      <h3><a href="productDetail.html?id=59"></a>Beyaz Kot Şort</h3>
+      <h3><a href="productDetail.html?id=59">Beyaz Kot Şort</a></h3>
       <p>399.99 TL</p>
       <button class="favorite-icon" data-id="59">♥</button>
     </div>
@@ -160,7 +160,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=60"><img src="images/urunler/shorts/MaviKotSort.jpg" alt="Mavi Kot Şort">
       </a>
-      <h3><a href="productDetail.html?id=60"></a> Mavi Kot Şort</h3>
+      <h3><a href="productDetail.html?id=60"> Mavi Kot Şort</a></h3>
       <p>399.99 TL</p>
       <button class="favorite-icon" data-id="60">♥</button>
     </div>
@@ -169,7 +169,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=61"><img src="images/urunler/shorts/BermudaSort.jpg" alt="Bermuda Şort ">
       </a>
-      <h3><a href="productDetail.html?id=61"></a>Bermuda Şort</h3>
+      <h3><a href="productDetail.html?id=61">Bermuda Şort</a></h3>
       <p>449.99 TL</p>
       <button class="favorite-icon" data-id="61">♥</button>
     </div>
@@ -178,7 +178,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=62"><img src="images/urunler/shorts/BeyazKetenSort.jpg" alt="Beyaz Keten Şort ">
       </a>
-      <h3><a href="productDetail.html?id=62"></a>Beyaz Keten Şort </h3>
+      <h3><a href="productDetail.html?id=62">Beyaz Keten Şort </a></h3>
       <p>449.99 TL</p>
       <button class="favorite-icon" data-id="62">♥</button>
     </div>
@@ -187,7 +187,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=63"><img src="images/urunler/shorts/YırtıkKotSort.jpg" alt="Yırtık Kot Şort">
       </a>
-      <h3><a href="productDetail.html?id=63"></a>Yırtık Kot Şort</h3>
+      <h3><a href="productDetail.html?id=63">Yırtık Kot Şort</a></h3>
       <p>449.99 TL</p>
       <button class="favorite-icon" data-id="63">♥</button>
     </div>
@@ -197,7 +197,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=64"><img src="images/urunler/shorts/KetenSort.JPG" alt="Keten Şort">
       </a>
-      <h3><a href="productDetail.html?id=64"></a>Keten Şort</h3>
+      <h3><a href="productDetail.html?id=64">Keten Şort</a></h3>
       <p>499.99 TL</p>
       <button class="favorite-icon" data-id="64">♥</button>
     </div>
@@ -206,7 +206,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=65"><img src="images/urunler/shorts/SiyahSort.jpg" alt="Siyah Kot Şort">
       </a>
-      <h3><a href="productDetail.html?id=65"></a>Siyah Kot Şort</h3>
+      <h3><a href="productDetail.html?id=65">Siyah Kot Şort</a></h3>
       <p>399.99 TL</p>
       <button class="favorite-icon" data-id="65">♥</button>
     </div>
@@ -215,7 +215,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=66"><img src="images/urunler/shorts/BordoSort.jpg" alt="Bordo Şort">
       </a>
-      <h3><a href="productDetail.html?id=66"></a>Bordo Şort</h3>
+      <h3><a href="productDetail.html?id=66">Bordo Şort</a></h3>
       <p>349.99 TL</p>
       <button class="favorite-icon" data-id="66">♥</button>
     </div>
@@ -224,7 +224,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=67"><img src="images/urunler/shorts/MaviSort.jpg" alt="Mavi Şort">
       </a>
-      <h3><a href="productDetail.html?id=67"></a>Mavi Şort</h3>
+      <h3><a href="productDetail.html?id=67">Mavi Şort</a></h3>
       <p>349.99 TL</p>
       <button class="favorite-icon" data-id="67">♥</button>
     </div>
@@ -233,7 +233,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=68"><img src="images/urunler/shorts/PudraSort.jpg" alt="Keten Pudra Şort">
       </a>
-      <h3><a href="productDetail.html?id=68"></a>Keten Pudra Şort</h3>
+      <h3><a href="productDetail.html?id=68">Keten Pudra Şort</a></h3>
       <p>399.99 TL</p>
       <button class="favorite-icon" data-id="68">♥</button>
     </div>
