--- a/skirt.html
+++ b/skirt.html
@@ -155,7 +155,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=69"><img src="images/urunler/skirts/KatlıMiniEtek.jpg" alt="Katlı Mini Etek">
       </a>
-      <h3><a href="productDetail.html?id=69"></a>Katlı Mini Etek</h3>
+      <h3><a href="productDetail.html?id=69">Katlı Mini Etek</a></h3>
       <p>449.99 TL</p>
       <button class="favorite-icon" data-id="69">♥</button>
     </div>
@@ -164,7 +164,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=70"><img src="images/urunler/skirts/UzunYırtmaclıEtek.jpg" alt="Uzun Yırtmaçlı Etek">
       </a>
-      <h3><a href="productDetail.html?id=70"></a> Uzun Yırtmaçlı Etek</h3>
+      <h3><a href="productDetail.html?id=70"> Uzun Yırtmaçlı Etek</a></h3>
       <p>499.99 TL</p>
       <button class="favorite-icon" data-id="70">♥</button>
     </div>
@@ -173,7 +173,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=71"><img src="images/urunler/skirts/DeriMiniEtek.jpg" alt="Kahve Deri Mini Etek">
       </a>
-      <h3><a href="productDetail.html?id=71"></a>Kahve Deri Mini Etek </h3>
+      <h3><a href="productDetail.html?id=71">Kahve Deri Mini Etek </a></h3>
       <p>549.99 TL</p>
       <button class="favorite-icon" data-id="71">♥</button>
     </div>
@@ -182,7 +182,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=72"><img src="images/urunler/skirts/SiyahTulEtek.jpg" alt="Tüllü Mini Etek">
       </a>
-      <h3><a href="productDetail.html?id=72"></a>Tüllü Mini Etek</h3>
+      <h3><a href="productDetail.html?id=72">Tüllü Mini Etek</a></h3>
       <p>599.99 TL</p>
       <button class="favorite-icon" data-id="72">♥</button>
     </div>
@@ -191,7 +191,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=73"><img src="images/urunler/skirts/MiniTulEtek.jpg" alt="Beyaz Mini Tül Etek">
       </a>
-      <h3><a href="productDetail.html?id=73"></a>Beyaz Mini Tül Etek</h3>
+      <h3><a href="productDetail.html?id=73">Beyaz Mini Tül Etek</a></h3>
       <p>599.99 TL</p>
       <button class="favorite-icon" data-id="73">♥</button>
     </div>
@@ -200,7 +200,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=74"><img src="images/urunler/skirts/FırfırlıMiniEtek.jpg" alt="Siyah Fırfırlı Mini Etek">
       </a>
-      <h3><a href="productDetail.html?id=74"></a>Siyah Fırfırlı Mini Etek</h3>
+      <h3><a href="productDetail.html?id=74">Siyah Fırfırlı Mini Etek</a></h3>
       <p>499.99 TL</p>
       <button class="favorite-icon" data-id="74">♥</button>
     </div>
@@ -209,7 +209,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=75"><img src="images/urunler/skirts/MiniBordoEtek.jpg" alt="Mini Bordo Etek">
       </a>
-      <h3><a href="productDetail.html?id=75"></a>Mini Bordo Etek</h3>
+      <h3><a href="productDetail.html?id=75">Mini Bordo Etek</a></h3>
       <p>399.99 TL</p>
       <button class="favorite-icon" data-id="75">♥</button>
     </div>
@@ -218,7 +218,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=76"><img src="images/urunler/skirts/MiniKotEtek.jpg" alt="Mini Kot Etek">
       </a>
-      <h3><a href="productDetail.html?id=76"></a>Mini Kot Etek</h3>
+      <h3><a href="productDetail.html?id=76">Mini Kot Etek</a></h3>
       <p>499.99 TL</p>
       <button class="favorite-icon" data-id="76">♥</button>
     </div>
@@ -227,7 +227,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=77"><img src="images/urunler/skirts/UzunLacivertEtek.jpg" alt="Uzun Lacivert Etek">
       </a>
-      <h3><a href="productDetail.html?id=77"></a>Uzun Lacivert Etek</h3>
+      <h3><a href="productDetail.html?id=77">Uzun Lacivert Etek</a></h3>
       <p>449.99 TL</p>
       <button class="favorite-icon" data-id="77">♥</button>
     </div>
@@ -236,7 +236,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=78"><img src="images/urunler/skirts/PileliYesilEtek.jpg" alt="Yeşil Pileli Etek">
       </a>
-      <h3><a href="productDetail.html?id=78"></a>Yeşil Pileli Etek</h3>
+      <h3><a href="productDetail.html?id=78">Yeşil Pileli Etek</a></h3>
       <p>449.99 TL</p>
       <button class="favorite-icon" data-id="78">♥</button>
     </div>
