--- a/trenchcoats.html
+++ b/trenchcoats.html
@@ -151,7 +151,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=79"><img src="images/urunler/trenchcoats/AntrasitMaxiTrenc.jpg" alt="Antrasit Maxi Trençkot">
       <a href=""></a>
-      <h3><a href="productDetail.html?id=79"></a>Antrasit Maxi Trençkot</h3>
+      <h3><a href="productDetail.html?id=79">Antrasit Maxi Trençkot</a></h3>
       <p>999.99 TL</p>
       <button class="favorite-icon" data-id="79">♥</button>
     </div>
@@ -160,7 +160,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=80"><img src="images/urunler/trenchcoats/BejMaxiTrenc.jpg" alt="Bej Maxi Trençkot">
       </a>
-      <h3><a href="productDetail.html?id=80"></a> Bej Maxi Trençkot</h3>
+      <h3><a href="productDetail.html?id=80">Bej Maxi Trençkot</a></h3>
       <p>999.99 TL</p>
       <button class="favorite-icon" data-id="80">♥</button>
     </div>
@@ -169,7 +169,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=81"><img src="images/urunler/trenchcoats/DeriMaxiTrenc.jpg" alt="Deri Maxi Trençkot ">
       </a>
-      <h3><a href="productDetail.html?id=81"></a>Deri Maxi Trençkot </h3>
+      <h3><a href="productDetail.html?id=81">Deri Maxi Trençkot </a></h3>
       <p>1499.99 TL</p>
       <button class="favorite-icon" data-id="81">♥</button>
     </div>
@@ -178,7 +178,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=82"><img src="images/urunler/trenchcoats/HakiMaxiTrenc.jpg" alt="Haki Maxi Trençkot">
       </a>
-      <h3><a href="productDetail.html?id=82"></a>Haki Maxi Trençkot</h3>
+      <h3><a href="productDetail.html?id=82">Haki Maxi Trençkot</a></h3>
       <p>999.99 TL</p>
       <button class="favorite-icon" data-id="82">♥</button>
     </div>
@@ -187,7 +187,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=83"><img src="images/urunler/trenchcoats/AntrasitCropTrenc.jpg" alt="Antrasit Crop Trençkot">
       </a>
-      <h3><a href="productDetail.html?id=83"></a>Antrasit Crop Trençkot</h3>
+      <h3><a href="productDetail.html?id=83">Antrasit Crop Trençkot</a></h3>
       <p>699.99 TL</p>
       <button class="favorite-icon" data-id="83">♥</button>
     </div>
@@ -196,7 +196,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=84"><img src="images/urunler/trenchcoats/BordoCropTrenc.jpg" alt="Bordo Crop Trençkot">
       </a>
-      <h3><a href="productDetail.html?id=84"></a>Bordo Crop Trençkot</h3>
+      <h3><a href="productDetail.html?id=84">Bordo Crop Trençkot</a></h3>
       <p>699.99 TL</p>
       <button class="favorite-icon" data-id="84">♥</button>
     </div>
@@ -205,7 +205,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=85"><img src="images/urunler/trenchcoats/DenimTrenc.jpg" alt="Orta Boy Denim Trençkot">
       </a>
-      <h3><a href="productDetail.html?id=85"></a>Orta Boy Denim Trençkot</h3>
+      <h3><a href="productDetail.html?id=85">Orta Boy Denim Trençkot</a></h3>
       <p>999.99 TL</p>
       <button class="favorite-icon" data-id="85">♥</button>
     </div>
@@ -214,7 +214,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=86"><img src="images/urunler/trenchcoats/DeriOrtaTrenc.jpg" alt="Orta Boy Deri Trençkot">
       </a>
-      <h3><a href="productDetail.html?id=86"></a>Orta Boy Deri Trençkot</h3>
+      <h3><a href="productDetail.html?id=86">Orta Boy Deri Trençkot</a></h3>
       <p>999.99 TL</p>
       <button class="favorite-icon" data-id="86">♥</button>
     </div>
@@ -223,7 +223,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=87"><img src="images/urunler/trenchcoats/HakiOrtaTrenc.jpg" alt="Haki Orta Boy Trençkot">
       </a>
-      <h3><a href="productDetail.html?id=87"></a>Haki Orta Boy Trençkot</h3>
+      <h3><a href="productDetail.html?id=87">Haki Orta Boy Trençkot</a></h3>
       <p>999.99 TL</p>
       <button class="favorite-icon" data-id="87">♥</button>
     </div>
@@ -232,7 +232,7 @@
     <div class="product-card">
       <a href="productDetail.html?id=88"><img src="images/urunler/trenchcoats/LacivertCropTrenc.jpg" alt="Lacivert Crop Trençkot">
       </a>
-      <h3><a href="productDetail.html?id=88"></a>Lacivert Crop Trençkot</h3>
+      <h3><a href="productDetail.html?id=88">Lacivert Crop Trençkot</a></h3>
       <p>699.99 TL</p>
       <button class="favorite-icon" data-id="88">♥</button>
     </div>
